<resources>
    <string name="app_name">Animation Recognition</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">email Already Exists</string>
    <string name="error_password_match">password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong email or password</string>
    <string name="error_register">Register fails</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="text_update">Update</string>
    <string name="text_update_fail">Update Fails</string>
    <string name="text_update_success">Update Succeeds</string>
    <string name="network_error">NetWork Error</string>
    <string name="photo">Photo</string>
    <string name="album">Album</string>
    <string name="share">Share</string>
    <string name="recognition">Recognition</string>
    <string name="subscribe">Subscribe</string>
    <string name="no_photo_chosen">No Photo Chosen</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="like">Like</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="max_priority">Max Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="default_priority">Default Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="min_priority">Min Priority</string>
    <string name="random_priority">Random Priority</string>
    <string name="big_text">Big Text</string>
    <string name="title">Android Notification</string>
    <string name="old">Old Notifications</string>
    <string name="big_picture">Big Picture</string>
    <string name="inbox_type">Inbox Type</string>
    <string name="summary_text">ATC has its main objective to spread learning of Android development
    applications worldwide. We intend to provide comprehensive and integrated IT certificates and
    courses for Android at different levels of trainees. \nWe deliver our courses through our partners
    all over the world.</string>
    <string name="xiaomi_failure">For android api reason, device with android version >= 7.0 or brand
        Xiaomi is not supported.</string>
    <string name="save_failure">Save permission is not granted.</string>
    <string name="download_success">Save successfully.</string>
    <string name="download_failure">Save unsuccessfully.</string>
</resources>
